2009-11-11  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=31348
        [Qt] Remove unnecessary LUT creator from WebCore.pro

        * WebCore.pro:

2009-11-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Introduce a function for querying the input method status
        in QWebPageClient.

        * platform/qt/QWebPageClient.h:

2009-11-11  Benjamin Otte  <otte@gnome.org>

        Reviewed by Jan Alonzo.

        [GTK] Black artifacts in youtube.com/html5

        Paint the video to the given size. It's the job of the callers to keep
        track of aspect ratio. RenderVideo.cpp does it for the <video>
        element.
        https://bugs.webkit.org/show_bug.cgi?id=30925

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::paint):

2009-11-11  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=30901
        [Gtk] Need to de-lint the Atk a11y code

        Cleaned up some missed capitalization style-guideline violations.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:

2009-11-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Make the default style background color valid.
        Currently the color is transparent but invalid, this causes
        list boxes in QtWebKit to be drawn with a black background
        since r49242.
        https://bugs.webkit.org/show_bug.cgi?id=31295

        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags::initialBackgroundColor):
        * rendering/style/StyleBackgroundData.cpp:
        (WebCore::StyleBackgroundData::StyleBackgroundData):

2009-11-10  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoff Garen.
